# CmdKeep

./: PROJECT_SUMMARY.md  README.en.md  README.md  命令速记.md
.claude/: settings.local.json
CmdKeep-Release/: 使用说明.txt
cmdkeep/: README.md  index.html  package-lock.json  package.json  快速开始.md
cmdkeep/src/: App.tsx  main.tsx  styles.css  types.ts
cmdkeep/src-tauri/: Cargo.toml  tauri.conf.json
cmdkeep/src-tauri/icons/: README.md
cmdkeep/src-tauri/src/: commands.rs  db.rs  main.rs
cmdkeep/src/components/: AddCommandModal.tsx  CategoryFilter.tsx  CommandItem.tsx  CommandList.tsx  SearchBar.tsx  SettingsMenu.tsx
cmdkeep/src/contexts/: LanguageContext.tsx
cmdkeep/src/i18n/: translations.ts
